--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ math:
 # Site author
 author:
   name     : Shunsuke Tatsuno
-  avatar   : "/assets/images/IMG_0371.jpg"
+  avatar   : "/assets/images/IMG_0371.JPG"
   bio      : "A master's degree student at the Graduate School of Law, Hitotsubashi University."
   location : "Tokyo, Japan"
   links:
