--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,6 @@ main:
   - title: "Cthulhu"
     url:  /cthulhu/
   - title: "Portfolio"
-    url: /potfolio/    
+    url: /portfolio/    
   - title: "Desk"
     url: /desk/
